--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Saint Thomas English Convent School</title>
+    <meta name="description" content="Saint Thomas English Convent School, Holalu - Excellence in Education" />
+    <meta name="author" content="Saint Thomas School" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Saint Thomas English Convent School" />
+    <meta property="og:description" content="Building Foundations For A Brighter Future" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/favicon.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@Lovable" />
